kyverno-project-7/tests/k8s/resources/bad-app.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-app
  namespace: default
spec:
  containers:
  - name: app
    image: nginx:latest
