kyverno-project-7/tests/k8s/resources/expected-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: test-netpol-ns
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
